_sass/main.scss
@import "reset";
@import url('https://fonts.googleapis.com/css?family=Roboto');

$font-stack: 'Roboto', Helvetica, sans-serif;
$base: #2A2D33;
$basecomp: #FFF4E0;
$links: #DA727E;
$highlight: #00ADB5; //wtf m8
$dates: #9FCBCC;

@mixin box-sizing($property) {
  -webkit-box-sizing: $property;
     -moz-box-sizing: $property;
          box-sizing: $property;
}
@mixin hyphens($property) {
  -webkit-hyphens: $property;
     -moz-hyphens: $property;
          hyphens: $property;
}
%content-base {
  display: flex;
  flex-flow: column nowrap;
  min-height: calc(100vh - 72px);
  h1 {
    margin: 0;
    span {
      color: $highlight;
    } //color
  }
}

* {
  @include box-sizing(border-box);
  @include hyphens(auto);
} // everythings a border box
*:before, *:after {
  @include box-sizing(border-box);
} // everythings a border box pt II
a {
  text-decoration: none;
  color: $links;
  transition: all .5s;
  &:hover {
    color: $base;
    background-color: $links;
  }
  &:after,&:before {
    transition: all .5s;
  }
} // set link colors
html {
  font-family: $font-stack;
  background-color: $base;
  color: $basecomp;
} // font family / theme colors

body {
  display: flex;
  flex-flow: column nowrap;
  
  margin-left: 40px;
} // body is a flex column with a left-marg 40px
@media all and (max-width: 500px) {
  body {
    margin-left: 0;
  }
} // reset left-marg 40px desktop theme for mobile
@media all and (max-width: 800px) {
  body {
    margin-left: 0;
  }
} // same-ish

nav {
  box-shadow: 0 1px 0 $basecomp;
  ul {
    display: flex;
    flex-flow: row nowrap;
    justify-content: flex-start;
    margin: 0 auto;
    li {
      a {
        position: relative; // Affects highlight underline animation
        display: block; // Affects box boundaries of nav <a> elements
        padding: 15px 5px;
        margin: 0 5px auto;

        text-transform: uppercase;
        text-decoration: none;
        font-weight: 900;
        &:hover {
          background-color: transparent;
        }
        &.current {
          color: $highlight;
          box-shadow: 0px 1px 0px $highlight;
        } // Colors & highlight Underline
        &.not-current {
          color: $basecomp;
        }
        &.not-current:after {
          position: absolute;
          bottom: -1px;
          left: 0;
          right: 0;
          margin: auto;
          width: 0%;
          content: '.';
          color: transparent;
          background: $highlight;
          height: 1px;
        } // Sets up highlight und anim for 'not-cur'
        &.not-current:hover:after {
          width: 100%;
        } // highlight Und Anim
      }
    }
  }
}
@media all and (max-width: 500px) {
  nav {
    ul {
      justify-content: center;
    }
  }
}
@media all and (max-width: 800px) {
  nav {
    ul {
      justify-content: center;
    }
  }
}

div#base-content {
  padding: 15px 10px 15px 0;
  @extend %content-base;
  ul#blog-list {
    margin: 5vh 0 0 0;
    max-width: 800px;
    li {
      margin: 0 0 3vh 0;
      padding-left: 10px;

      border-left-color: $basecomp;
      border-left-style: solid;
      border-left-width: 1px;
      &:last-child{
        margin: 0;
      }
      h2 {
        text-transform: capitalize;
        display: inline-block;
        margin: 0 auto;
      }
      p {
        margin: 0 auto;
      }
      p.read-more {
        text-align: left;
        text-decoration: underline;
      }
      p.date {
        display: inline-block;
        color: $dates;
        
        padding: 5px 0.5em;
        border-left-color: $basecomp;
        border-left-style: dotted;
        border-left-width: 1px;
      }
    }
  }
}
@media all and (max-width: 500px) {
  div#base-content {
    min-height: 0;
    padding-left: 10px;
    h1 {
      text-align: center;
    }
    ul#blog-list {
      margin-top: 3vh;
      li {
        border: 0vw;
        padding-left: 0;
        h2 {
          display: block;
          //padding-left: 10px;
        }
        p.date {
          display: block;
          border: 0ch;
          padding: 0px;
        }
        p.read-more {
          display: none;
        }
      }
    }
  }
}
@media all and (max-width: 800px) {
  div#base-content {
    min-height: 0;
    padding-left: 10px;
    h1 {
      text-align: center;
    }
    ul#blog-list li {
      border: 0;
      padding-left: 0;
      p.read-more {
        display: none;
      }
    }
  }
}

footer {
  padding: 5px 0 0 0;
  font-size: 25%;
  text-align: center;
  background-color: $base;
  box-shadow: 0 -1px 0 $basecomp;
  p {
    margin: 0 auto;
    color: $basecomp;
  }
  span {
    padding: 6px 0 0 0;
    color: $highlight;
    box-shadow: 0 -1px 0 $highlight;
  }
}
@media all and (max-width: 500px) {
  footer span {
    padding: 5px 0 0 0;
  }
}
@media all and (max-width: 800px) {
  footer span {
    padding: 5px 0 0 0;
  }
}

/////////////////
/* ABOUT PAGE */
////////////////

div#base-content {
  div#about-me {
    display: flex;
    flex-flow: row wrap-reverse;
    justify-content: space-between;
  }
  div#about-me > a {
    margin: 0 auto;
  }
  p.about-me {
    max-width: 50vw;
    margin: 0;
  }
  img#selfie {
    border-radius: 3px;
    border: 1px solid $highlight;
    box-shadow : 0 1px 2px rgba(0, 0, 0, 0.50), 0 1px 3px rgba(0, 0, 0, 0.46);
  }
  form.newsletter {
    border-radius: 25px;
    border: 1px solid $highlight;
    box-shadow : 0 1px 2px rgba(0, 0, 0, 0.50), 0 1px 3px rgba(0, 0, 0, 0.46);
    padding: 15px;
    margin-top: auto;
    text-align: center;
    p {
      margin: 5px;
    }
  }
}
@media all and (max-width: 500px) {
  div#base-content {
    h1#about-hello {
      margin-bottom: 15px;
    }
    p.about-me {
      max-width: 100%;
      margin: 0 auto;
    }
  }
}
@media all and (max-width: 800px) {
  div#base-content {
    h1#about-hello {
      margin-bottom: 15px;
      text-align: center;
    }
    p.about-me {
      max-width: 100%;
      margin: 0 auto;
    }
  }
}

////////////////
/* POST PAGE */
///////////////

div#post-content {
  padding: 15px 5em 15px 0;
  @extend %content-base;
  h1#post-title {
    text-transform: capitalize;
  }
  p#post-date {
    margin: 0;
    color: $dates;
  
    padding: 3px 0;
  }
  p {
    margin: 5px 0;
  }
  img.img-responsive {
    display: block;
    margin: auto;
    width: 100%;
    max-width: 50%;
    height: auto;
  }
}
@media all and (max-width: 500px) {
  div#post-content {
    padding: 15px 0;
    p#post-date {
      display: block;
      text-align: center;
    }
    img.img-responsive {
      max-width: 100%;
    }
  }
}
@media all and (max-width: 800px) {
  div#post-content {
    padding: 15px 10px;
    h1#post-title {
      text-align: center;
    }
    p#post-date {
      display: block;
      text-align: center;
    }
    img.img-responsive {
      max-width: 100%;
    }
  }
}

